<resources>
    <string name="app_name">BodySculpt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_you_current_weight">Enter you current weight</string>
    <string name="enter_you_weight_of_dream">Enter your desired weight</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="breath_gymnastic">Breath Gymnastic</string>
    <string name="day_menu">Day Menu</string>
    <string name="recipe_list">Recipe List</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="person_info">Person Info</string>
    <string name="gender">Gender</string>
    <string name="current_weight">Current weight</string>
    <string name="height">Height</string>
    <string name="weight">Weight:</string>
    <string name="empty_weight_list">Your list of weight measurements is empty. Add new entries to see a graph of weight changes.</string>
    <string name="kcal_header">Kcal: %1$s</string>
    <string name="proteins_header">Proteins: %1$s</string>
    <string name="fat_header">Fat: %1$s</string>
    <string name="weight_header">Weight: %1$s</string>
    <string name="carbo_header">Carbo: %1$s</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="enter_the_name_of_the_dish">Enter the name of the dish</string>
    <string name="empty_menu_list">You haven\'t filled out your meal plan yet today. Add new dishes to keep track of your nutrition.</string>
    <string name="total_n_info">Total \n Info</string>
    <string name="breathing_exercises">Breathing exercises</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="inhale">Inhale</string>
    <string name="exhalation">Exhalation</string>
    <string-array name="genders">
        <item>Not specified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>