<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menu_of_day.MenuOfDayFragment">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barierNutrientsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvKcalHeader,tvProteinsHeader"
        />

    <TextView
        android:id="@+id/tvTotalInfoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvKcalHeader"
        app:layout_constraintBottom_toBottomOf="@id/tvProteinsHeader"
        android:text="@string/total_n_info"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:visibility="gone"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/tvKcalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kcal_header"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvTotalInfoHeader"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tvProteinsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteins_header"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvTotalInfoHeader"
        app:layout_constraintTop_toBottomOf="@id/tvKcalHeader"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tvFatHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat_header"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/barierNutrientsHeader"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tvCarboHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbo_header"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/barierNutrientsHeader"
        app:layout_constraintTop_toBottomOf="@id/tvFatHeader"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMenuOfDay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCarboHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        />

    <TextView
        android:id="@+id/tvEmptyMenuDayList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/empty_menu_list"
        android:layout_marginHorizontal="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>