<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/recipeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="5dp"
        />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/recipeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barierNutrientsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvKcalHeader,tvProteinsHeader"
        />

    <TextView
        android:id="@+id/tvKcalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kcal_header"
       app:layout_constraintStart_toEndOf="@id/recipeLogo"
        app:layout_constraintTop_toBottomOf="@id/recipeName"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/tvProteinsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteins_header"
        app:layout_constraintStart_toEndOf="@id/recipeLogo"
        app:layout_constraintTop_toBottomOf="@id/tvKcalHeader"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/tvFatHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat_header"
        app:layout_constraintStart_toStartOf="@id/barierNutrientsHeader"
        app:layout_constraintTop_toBottomOf="@id/recipeName"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/tvCarboHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbo_header"
        app:layout_constraintStart_toStartOf="@id/barierNutrientsHeader"
        app:layout_constraintTop_toBottomOf="@id/tvFatHeader"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>