<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:elevation="6dp"
    >

    <ImageView
        android:id="@+id/recipeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/recipeName"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/recipeLogo"
        app:layout_constraintEnd_toStartOf="@id/backgroundBtnAdd"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barierNutrientsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvKcalHeader,tvProteinsHeader" />

    <TextView
        android:id="@+id/tvKcalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/kcal_header"
        app:layout_constraintStart_toEndOf="@id/recipeLogo"
        app:layout_constraintTop_toBottomOf="@id/recipeName" />

    <TextView
        android:id="@+id/tvProteinsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/proteins_header"
        app:layout_constraintStart_toEndOf="@id/recipeLogo"
        app:layout_constraintTop_toBottomOf="@id/tvKcalHeader" />

    <TextView
        android:id="@+id/tvFatHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/fat_header"
        app:layout_constraintStart_toStartOf="@id/barierNutrientsHeader"
        app:layout_constraintTop_toBottomOf="@id/recipeName" />

    <TextView
        android:id="@+id/tvWeghtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/weight_header"
        app:layout_constraintStart_toEndOf="@id/tvFatHeader"
        app:layout_constraintTop_toBottomOf="@id/recipeName" />

    <TextView
        android:id="@+id/tvCarboHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/carbo_header"
        app:layout_constraintStart_toStartOf="@id/barierNutrientsHeader"
        app:layout_constraintTop_toBottomOf="@id/tvFatHeader" />

    <ImageView
        android:id="@+id/backgroundBtnAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnAddMenuItem"
        app:layout_constraintEnd_toEndOf="@id/btnAddMenuItem"
        android:src="@drawable/btn_add_background"
        />

    <ImageView
        android:id="@+id/btnAddMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/add"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>